--- a/lc_application/templates/myapp/dashboardPage.html
+++ b/lc_application/templates/myapp/dashboardPage.html
@@ -34,7 +34,7 @@
             <!-- Sidebar with specific Font Awesome Icons -->
             <nav class="sidebar">
                 <ul>
-                    <li><a href="{% url 'dashboardPage' %}"><i class="fas fa-tasks"></i> DASHBOARD</a></li>
+                    <li><a href="{% url '' %}"><i class="fas fa-tasks"></i> DASHBOARD</a></li>
                     <li><a href="{% url 'add_lc' %}"><i class="fas fa-plus-square"></i> ADD LC</a></li>
                     <li><a href="{% url 'view_lc' %}"><i class="fas fa-file-alt"></i> VIEW LC</a></li>
                     <li><a href="{% url 'lc_predict' %}"><i class="fas fa-chart-line"></i> PREDICT LC</a></li>
